2000-08-20  Ulrich Drepper  <drepper@redhat.com>

	* semaphore.h: Add restrict where required by AGd4.
	* sysdeps/pthread/pthread.h: Likewise.
	* sysdeps/pthread/unix/sysv/linux/bits/sigthread.h: Likewise.

2000-08-15  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add ex12.  Add rule to build it.
	* Examples/ex12.c: New file.

2000-08-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define _POSIX_SEMAPHORES
	even though the implementation is not quite complete (but it reports
	it).  Define _POSIX_MESSAGE_PASSING to -1.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Likewise.

2000-08-12  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/pt-machine.h (testandset): Add .set mips2 for
	assembler.
	(__compare_and_swap): Likewise.
	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Likewise.

2000-08-10  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (__pthread_initial_thread): Initialize p_errnop and
	p_h_errnop correctly and not to NULL.

2000-08-05  Ulrich Drepper  <drepper@redhat.com>

	* Banner: Bump version number to 0.9.

2000-08-04  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tststack.  Add rule to build the program.
	* tststack.c: New file.

	* internals.h: Declare __pthread_max_stacksize.
	* pthread.c (__pthread_max_stacksize): New variable.
	(__pthread_initialize_manager): Determine __pthread_initialize_manager
	value.
	* manager.c (thread_segment): Return always NULL if FLOATING_STACKS.
	(pthread_allocate_stack): Allow kernel to choose stack address if
	FLOATING_STACKS.  This also handles variable-sized stacks.
	Always allocate stack and guardpage together.  Use mprotect to
	change guardpage access.
	* sysdeps/i386/useldt.h: Define FLOATING_STACKS and
	ARCH_STACK_MAX_SIZE.

	* attr.c (__pthread_attr_setstacksize): Also test value against
	upper limit.

	* manager.c (__pthread_nonstandard_stacks): Define only if
	THREAD_SELF is not defined.