@@ -1,3 +1,9 @@
+2000-08-22  Andreas Jaeger  <aj@suse.de>
+
+	* Examples/ex13.c: New test by Kurt Garloff <garloff@suse.de>.
+
+	* Makefile (tests): Add ex13.
+
 2000-08-20  Ulrich Drepper  <drepper@redhat.com>
 
 	* semaphore.h: Add restrict where required by AGd4.
